fix: Solve content dissapearing into navbar
The navigation bar being fixed to the top wwould superpose above the main content of the page, now being a static element it allows the content to not overlap

--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -1,7 +1,6 @@
 main {
   background-color: $main-color;
   width: 100%;
-  height: 100vh;
 
   .exchange-rates-layout {
     height: 50vh;
