--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -10,4 +10,5 @@
 
 body {
   font-family: "Montserrat", sans-serif;
+  background-color: $main-color;
 }
